--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@ body {
 .confirmation-bg {
     background-color: #FBFBFB;
 }
+#fixed {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 9999;
+    background-color: white;
+    
+    /* Rectangle 11: */
+    box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.18);
+}
 #headcontact {
     margin-top: 10px;
     margin-right: 5px;
@@ -25,7 +36,7 @@ body {
 }
 #navigation {
     margin-top: 5px;
-    margin-bottom: 35px;
+    margin-bottom: 15px;
 }
 #navigation ul {
     list-style-type: none;
@@ -50,7 +61,7 @@ body {
     margin-top: 30px;
 }
 #landing {
-    margin-top: 20px;
+    margin-top: 200px;
 }
 h1 {
     text-align: center;
