--- a/style.css
+++ b/style.css
@@ -14,12 +14,13 @@ body {
     top: 0;
     left: 0;
     width: 100%;
+    height: 12vh;
     z-index: 9999;
     background-color: white;
     
-    /* Rectangle 11: */
     box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.18);
 }
+
 #headcontact {
     margin-top: 10px;
     margin-right: 5px;
@@ -34,6 +35,7 @@ body {
     text-decoration: none;
     color: #6D6D6D;
 }
+
 #navigation {
     margin-top: 5px;
     margin-bottom: 15px;
@@ -58,7 +60,7 @@ body {
     padding-bottom: 100px;
 }
 #header {
-    margin-top: 30px;
+    margin-top: 12px;
 }
 #landing {
     margin-top: 200px;
@@ -206,9 +208,35 @@ h4 {
 button {
     outline: none;
 }
+#footer {
+    position: fixed;
+    left: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    background: #F9F9F9;
+    box-shadow: 0px -2px 2px 0px rgba(0,0,0,0.18);
+    text-align: right;
+}
+#footer #navigation li {
+    margin: 0 13px;
+}
+#footer #navigation {
+    margin-top: 0px;
+}
+#footer #navigation ul li {
+    font-weight: 300;
+    font-size: 12px;
+    padding: 5px 0px;
+}
+
 @media (max-width: 990px) {
     #services .service-block-right {
         padding-left: 0px;
+    }
+    #fixed {
+        height: 15vh;
     }
 }
 @media (min-width: 768px) and (max-width: 1199px) {
