--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 12vh;
+    height: 150px;
     z-index: 9999;
     background-color: white;
     
